--- a/index.html
+++ b/index.html
@@ -6,23 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Egon Schiele</title>
-
-		<script src="libraries/p5.js"></script>
-		<script src="libraries/p5.dom.js"></script>
-		<script src="libraries/p5.sound.js"></script>
-		<script src="javascript/sketch.js"></script>
-		<script defer src="javascript/scripts.js"></script>
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<!-- Rounded switch -->
-		<label class="switch">
-			<input id="toggling" type="checkbox">
-			<span class="slider round"></span>
-		</label>
-		<!-- <div class="image">
-			<img src="../assets/self-portrait.jpg" alt="">
-		</div> -->
 		<div class="container">
 			<p>
 				I, eternal child — <br>
@@ -38,5 +24,11 @@
 				telling them I am worthless <br>
 			</p>
 		</div>
+
+		<script src="libraries/p5.js"></script>
+		<script src="libraries/p5.dom.js"></script>
+		<script src="libraries/p5.sound.js"></script>
+		<script src="javascript/sketch.js"></script>
+		<!-- <script defer src="javascript/scripts.js"></script> -->
 	</body>
 </html>
