--- a/portrait.html
+++ b/portrait.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-
+		<a href="index.html"><i class="left"></i></a>
+		<div id="video"></div>
 	</body>
 </html>
